Contrast of edge colors adapted to be more readable Description of algorithm steps added Subtour highlight fix added

--- a/implementation/hierholzer/APPLICATION/css/style.css
+++ b/implementation/hierholzer/APPLICATION/css/style.css
@@ -336,3 +336,14 @@ header {
 html {
     overflow-y: scroll; 
 }
+.ui-state-error {
+    color: white !important;
+}
+.result_euleriantour, .result_subtour {
+    font-size: 15px;
+}
+.result_euleriantour span {
+    font-weight: 900;
+    font-size: 24px;
+    vertical-align: bottom;
+}
